--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T16:36:12+00:00\n"
-"PO-Revision-Date: 2021-07-27 18:43+0200\n"
+"PO-Revision-Date: 2021-07-28 00:54+0200\n"
 "Last-Translator: Max Guglielmino <info@maxguglielmino.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -151,7 +151,7 @@ msgstr ""
 
 #: inc/custom-comments.php:102
 msgid "Comments are closed."
-msgstr "Commenti disabilitati."
+msgstr "I commenti sono chiusi."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
