--- a/languages/ja_JP.po
+++ b/languages/ja_JP.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T16:36:12+00:00\n"
-"PO-Revision-Date: 2021-07-27 18:43+0200\n"
+"PO-Revision-Date: 2021-07-28 00:55+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja_JP\n"
@@ -156,7 +156,7 @@ msgstr ""
 
 #: inc/custom-comments.php:102
 msgid "Comments are closed."
-msgstr "コメントは閉じられました。"
+msgstr "コメントは受け付けていません。"
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
