--- a/languages/nn_NO.po
+++ b/languages/nn_NO.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T16:36:12+00:00\n"
-"PO-Revision-Date: 2021-07-27 18:44+0200\n"
+"PO-Revision-Date: 2021-07-28 00:57+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: nn_NO\n"
@@ -158,7 +158,7 @@ msgstr ""
 
 #: inc/custom-comments.php:102
 msgid "Comments are closed."
-msgstr "Kommentarer er stengt."
+msgstr "Stengt for kommentarar."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
