--- a/languages/pl_PL.po
+++ b/languages/pl_PL.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T16:36:12+00:00\n"
-"PO-Revision-Date: 2021-07-27 18:44+0200\n"
+"PO-Revision-Date: 2021-07-28 00:57+0200\n"
 "Last-Translator: Mirosław Zalewski <mz@miroslaw-zalewski.eu>\n"
 "Language-Team: Polish\n"
 "Language: pl_PL\n"
@@ -158,7 +158,7 @@ msgstr ""
 
 #: inc/custom-comments.php:102
 msgid "Comments are closed."
-msgstr "Komentarze są zamknięte"
+msgstr "Możliwość komentowania została wyłączona."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
