--- a/languages/pt_BR.po
+++ b/languages/pt_BR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T16:36:12+00:00\n"
-"PO-Revision-Date: 2021-07-27 18:45+0200\n"
+"PO-Revision-Date: 2021-07-28 00:58+0200\n"
 "Last-Translator: Diego Versiani <diegoversiani@gmail.com>\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
@@ -152,7 +152,7 @@ msgstr ""
 
 #: inc/custom-comments.php:102
 msgid "Comments are closed."
-msgstr "Os comentários estão fechados."
+msgstr "Os comentários estão desativados."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
