--- a/languages/sl_SI.po
+++ b/languages/sl_SI.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T16:36:12+00:00\n"
-"PO-Revision-Date: 2021-07-27 18:46+0200\n"
+"PO-Revision-Date: 2021-07-28 00:59+0200\n"
 "Last-Translator: Davor Lonzaric <info@fatshape.com>\n"
 "Language-Team: \n"
 "Language: sl_SI\n"
@@ -160,7 +160,7 @@ msgstr ""
 
 #: inc/custom-comments.php:102
 msgid "Comments are closed."
-msgstr "Komentarji so zaklenjeni."
+msgstr "Komentarji so onemogočeni."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
