--- a/languages/sv_SE.po
+++ b/languages/sv_SE.po
@@ -3,15 +3,14 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T16:36:12+00:00\n"
-"PO-Revision-Date: 2021-07-27 18:46+0200\n"
+"PO-Revision-Date: 2021-07-28 01:01+0200\n"
 "Last-Translator: Filip Wessman <filip@effektid.com>\n"
 "Language-Team: Swedish (Swedish)\n"
 "Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Loco-Source-Locale: sv_SE\n"
 "POT-Revision-Date: Mon Jul 04 2016 09:13:18 GMT+0200 (CEST)\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -122,7 +121,6 @@ msgid "%1$s thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
 msgstr[0] ""
 msgstr[1] ""
-msgstr[2] ""
 
 #: comments.php:64 comments.php:99
 msgid "Comment navigation"
@@ -154,7 +152,7 @@ msgstr ""
 
 #: inc/custom-comments.php:102
 msgid "Comments are closed."
-msgstr "Kommentarsfältet är avstängt."
+msgstr "Kommentarer inaktiverade."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
