--- a/languages/pl_PL.po
+++ b/languages/pl_PL.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:06+0200\n"
+"PO-Revision-Date: 2021-07-28 09:42+0200\n"
 "Last-Translator: Mirosław Zalewski <mz@miroslaw-zalewski.eu>\n"
 "Language-Team: Polish\n"
 "Language: pl_PL\n"
@@ -150,7 +150,7 @@ msgstr "Możliwość komentowania została wyłączona."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "Domyślny obrazek nagłówka"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
