--- a/languages/el_GR.po
+++ b/languages/el_GR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:11+0200\n"
+"PO-Revision-Date: 2021-07-28 09:38+0200\n"
 "Last-Translator: \n"
 "Language-Team: stef.kariotidis@gmail.com\n"
 "Language: el_GR\n"
@@ -151,7 +151,7 @@ msgstr "Τα σχόλια είναι απενεργοποιημένα."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "Προεπιλεγμένη Εικόνα Κεφαλίδας"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
