--- a/languages/fr_FR.po
+++ b/languages/fr_FR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:11+0200\n"
+"PO-Revision-Date: 2021-07-28 09:39+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -151,7 +151,7 @@ msgstr "Les commentaires sont fermés."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "Image d’en-tête par défaut"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
