--- a/languages/he_IL.po
+++ b/languages/he_IL.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: UnderStrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:10+0200\n"
+"PO-Revision-Date: 2021-07-28 09:39+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: he_IL\n"
@@ -121,7 +121,7 @@ msgstr "סגור לתגובות."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr "תמונת כותרת כללית"
+msgstr "תמונת כותרת כלליתתמונת כותרת ברירת מחדל"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
