--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:10+0200\n"
+"PO-Revision-Date: 2021-07-28 09:40+0200\n"
 "Last-Translator: Max Guglielmino <info@maxguglielmino.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -143,7 +143,7 @@ msgstr "I commenti sono chiusi."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "Immagine predefinita dell'header"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
