--- a/languages/ja_JP.po
+++ b/languages/ja_JP.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:09+0200\n"
+"PO-Revision-Date: 2021-07-28 09:40+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja_JP\n"
@@ -148,7 +148,7 @@ msgstr "コメントは受け付けていません。"
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "デフォルトのヘッダー画像"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
