--- a/languages/nl_NL.po
+++ b/languages/nl_NL.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:07+0200\n"
+"PO-Revision-Date: 2021-07-28 09:41+0200\n"
 "Last-Translator: vincent <v.vanbergen@gmail.com>\n"
 "Language-Team: Nederlands\n"
 "Language: nl_NL\n"
@@ -115,7 +115,7 @@ msgstr "Reacties zijn gesloten."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "Standaard Header Afbeelding"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
