--- a/languages/nn_NO.po
+++ b/languages/nn_NO.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:07+0200\n"
+"PO-Revision-Date: 2021-07-28 09:42+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: nn_NO\n"
@@ -150,7 +150,7 @@ msgstr "Stengt for kommentarar."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "Standard toppbilete"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
