--- a/languages/sl_SI.po
+++ b/languages/sl_SI.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:04+0200\n"
+"PO-Revision-Date: 2021-07-28 09:44+0200\n"
 "Last-Translator: Davor Lonzaric <info@fatshape.com>\n"
 "Language-Team: \n"
 "Language: sl_SI\n"
@@ -152,7 +152,7 @@ msgstr "Komentarji so onemogočeni."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "Privzeta slika glave"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
