--- a/languages/tr_TR.po
+++ b/languages/tr_TR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: understrap\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/theme/understrap\n"
 "POT-Creation-Date: 2021-07-27T23:10:49+00:00\n"
-"PO-Revision-Date: 2021-07-28 02:03+0200\n"
+"PO-Revision-Date: 2021-07-28 09:46+0200\n"
 "Last-Translator: Tanju Yıldız <ben@tanjuyildiz.com>\n"
 "Language-Team: \n"
 "Language: tr_TR\n"
@@ -148,7 +148,7 @@ msgstr "Yorumlar kapatıldı."
 
 #: inc/custom-header.php:54
 msgid "Default Header Image"
-msgstr ""
+msgstr "Varsayılan üst alan görseli"
 
 #: inc/customizer.php:42
 msgid "Theme Layout Settings"
